--- a/styles/queries.css
+++ b/styles/queries.css
@@ -154,7 +154,7 @@
 
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) and (orientation: portrait) {
 
 	body { font-size: 16px; }
 
@@ -345,7 +345,7 @@
 
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 480px) and (orientation: portrait) {
 
 	.col { 
 		/*margin: 1% 0 1% 0%;*/
