--- a/styles/queries.css
+++ b/styles/queries.css
@@ -154,6 +154,102 @@
 
 }
 
+@media only screen and (orientation: landscape) and (max-width: 736px) {
+
+
+	body { font-size: 18px; }
+    
+    section { padding: 60px 0; }
+
+
+    #main-heading {
+    	position: relative;
+    }
+
+    .navigate {
+    	position: absolute;
+    	top: 40%;				
+    	left: -1%; 
+    	width: 100%;
+    	margin: 0;
+    	padding: 0;
+    	white-space: nowrap;
+    	padding-bottom: -70px;
+    }
+
+    
+
+	.about-section {
+    	width: 80%;
+    	margin-left: 10%;
+
+	}
+
+	.social-links li {
+    	font-size: 1.7em;
+	}
+
+	.parent-image img {
+		margin-top: -80px;
+		width: 180px;
+		height: 190px;
+		
+	}
+
+	.skill-icon i {
+		font-size: 2.5em;
+	}
+
+	.navigate img {
+	    width: 30px;
+		height: 30px;
+	}
+
+	.main-text {
+	    white-space: nowrap;
+	} 
+
+	.box {
+    	width: 29%;
+    	height: auto;
+    }
+
+	.box figure {
+	    width: 100%;
+	    height: auto;
+	}
+
+	.box img {
+	    width: 100%;
+	    height: auto;
+	}   
+	
+	.box1 {
+		width: 21%;
+	    height: auto;
+	}
+
+	.hobby-row {
+	    width: 100%;
+	    text-align: center;
+	}
+
+	.hobby-row figure {
+		width: 100%;
+	    height: auto;
+	}
+
+	.hobby-row img {
+		width: 100%;
+		height: auto;
+	}
+
+	.footer-links li {
+		font-size: 2em;
+	}
+
+}
+
 @media only screen and (max-width: 767px) {
 
 	body { font-size: 16px; }
